--- a/style.css
+++ b/style.css
@@ -1,21 +1,4 @@
-.site-footer {
-  background: #0a3d62;
-  color: white;
-  text-align: center;
-  padding: 30px 15px;
-  margin-top: 60px;
-}
-
-.footer-socials a {
-  color: #ffffff;
-  margin: 0 10px;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.footer-socials a:hover {
-  text-decoration: underline;
-}body {.top-header {
+.top-header {
   position: fixed;
   top: 0;
   right: 0;
